# openstack-ai-style-guide

./: .ai-context  .ansible-lint  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .stestr.conf  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HACKING.rst  LICENSE  Makefile  README.md  ai-code-review-techniques.md  comprehensive-guide.md  future-modernization-plan.md  plugin-patterns.md  pyproject.toml  refactor.md  requirements.yml  ruff.toml  tox.ini
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: teim-review.mdc
agents/: code-maintainability-auditor.md  code-review-agent.md  commit-summary.md  doc-to-markdown.md  project-guidelines-extractor.md  security-auditor.md  teim-review-agent.md  zuul-context-extractor.md
config/: tool-profiles.json
cursor/: teim-review-mode-template.json
docs/: codex.md  comprehensive-guide.md  environment-variables.md  future-test-improvements.md  quick-rules.md  review-system-overview.md  zuul-configuration.md
docs/archive/: README.md
docs/checklists/: README.md  code-review.md  pre-submit.md
docs/examples/: README.md
docs/examples/bad/: anti_patterns.py  commit_messages.md
docs/examples/good/: basic_service.py  commit_messages.md  test_example.py
docs/knowledge/: README.md
docs/knowledge/examples/: README.md
docs/knowledge/overlays/: README.md
docs/templates/: README.md  commit_message.txt  pre-commit-config.yaml  python_module.py.template  python_test.py.template
examples/: README.md
examples/bad/: anti_patterns.py
playbooks/claude-review/: analyze-commit.yaml  collect-results.yaml  extract-context.yaml  perform-review.yaml  post.yaml  run.yaml
playbooks/claude-review/files/: generate_html_report.py  parse_review_for_comments.py  render_html_from_json.py  validate_zuul_schema.py
playbooks/claude-review/tasks/: display-zuul-return.yaml  run-claude-command.yaml
playbooks/code-review/: TROUBLESHOOTING.md  analyze-commit.yaml  collect-results.yaml  extract-context.yaml  perform-review.yaml  post.yaml  run.yaml
playbooks/code-review/tasks/: check-opencode-result.yaml  run-opencode-command.yaml
playbooks/teim-code-review/: post.yaml  run.yaml
plugins/teim-review/.codex-plugin/: plugin.json
plugins/teim-review/references/: teim-review-core.md  tool-profiles.json
references/: MarkdownLintRules.md  README.md  ai-policy.md  commit-message.md  dco.md  hacking.md  pep8.md
roles/ai-code-review/defaults/: main.yaml
roles/ai-code-review/meta/: main.yaml
roles/ai-context-extraction/defaults/: main.yaml
roles/ai-context-extraction/tasks/: main.yaml
roles/ai-html-generation/tasks/: main.yaml
roles/ai-review-setup/defaults/: main.yaml
roles/ai-zuul-integration/files/: generate_zuul_comments.py
roles/ai-zuul-integration/meta/: main.yaml
roles/ai_code_review/defaults/: main.yaml
roles/ai_code_review/files/: repair_review_json.py  validate_review_schema.py
roles/ai_code_review/meta/: main.yaml
roles/ai_code_review/tasks/: main.yaml
roles/ai_html_generation/: Makefile
roles/run_claude_code/: README.md
schemas/: review-report-schema.json
scripts/: install-codex-skill  run-molecule-all.sh
skills/teim-review/: SKILL.md
tests/: test.py
tests/local_fixtures/: claude.py  conf.py  zuul.py
tests/test_data/: sample_invalid_review.json  sample_review.json  sample_zuul_context.json
tests/unit/: test_codex_schema_contract.py  test_detect_changed_files.py  test_generate_zuul_comments.py  test_install_codex_skill.py  test_render_html.py  test_repo_contracts.py  test_tools.py  test_zuul_schema.py
tools/: README.md  count_tokens.py  render_html_from_json.py  validate_style.py
zuul.d/: jobs.yaml  projects.yaml  semaphores.yaml
(+52 files in other folders)
